[gd_scene load_steps=7 format=3 uid="uid://bf8gpgekt6jyy"]

[ext_resource type="Script" path="res://src/main/scene/ui/game_screen.gd" id="1_1di74"]
[ext_resource type="LabelSettings" uid="uid://c1utb4vpk7e5" path="res://src/main/assets/resources/vb_32_dark.tres" id="1_3str6"]
[ext_resource type="Texture2D" uid="uid://b70042pvk5p0" path="res://src/main/assets/ui/blue_button00.png" id="2_2qyoj"]
[ext_resource type="Texture2D" uid="uid://dhs610cbh4dpd" path="res://src/main/assets/ui/yellow_button00.png" id="3_l3wnt"]
[ext_resource type="Texture2D" uid="uid://0qlc0lyyqejg" path="res://src/main/assets/ui/green_button00.png" id="4_5spbl"]
[ext_resource type="LabelSettings" uid="uid://bhixcyfrq4kad" path="res://src/main/assets/resources/vb_32_white.tres" id="5_ykpjm"]

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1di74")

[node name="HB" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MC1" type="MarginContainer" parent="HB"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TileContainer" type="GridContainer" parent="HB/MC1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MC2" type="MarginContainer" parent="HB"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/margin_right = 18

[node name="VB" type="VBoxContainer" parent="HB/MC2"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="HB" type="HBoxContainer" parent="HB/MC2/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="HB/MC2/VB/HB"]
layout_mode = 2
size_flags_horizontal = 3
text = "Moves"
label_settings = ExtResource("1_3str6")
vertical_alignment = 1

[node name="MovesLabel" type="Label" parent="HB/MC2/VB/HB"]
layout_mode = 2
text = "000"
label_settings = ExtResource("1_3str6")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HB2" type="HBoxContainer" parent="HB/MC2/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="HB/MC2/VB/HB2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pairs"
label_settings = ExtResource("1_3str6")
vertical_alignment = 1

[node name="PairsLabel" type="Label" parent="HB/MC2/VB/HB2"]
layout_mode = 2
text = "0/00"
label_settings = ExtResource("1_3str6")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Spacer" type="Control" parent="HB/MC2/VB"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ExitButton" type="TextureButton" parent="HB/MC2/VB"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_2qyoj")
texture_pressed = ExtResource("3_l3wnt")
texture_hover = ExtResource("4_5spbl")

[node name="Label" type="Label" parent="HB/MC2/VB/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = ExtResource("5_ykpjm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sound" type="AudioStreamPlayer" parent="."]
volume_db = -15.0
